fix(security): swagger broken